# grass

./: CMakeLists.txt  LICENSE  README.md  run.sh  test.cpp  vcpkg.json
res/: help.txt
res/misc/: help.txt
res/plugins/: cpp  python  set_bg_color  test_plugin  test_plugin_2  test_plugin_3
src/: grass.cpp  grass.h  main.cpp  plugin_manager.h
src/grass/: CMakeLists.txt
src/grass/src/: common.h  grass.cpp  grass.h  main.cpp  plugin_manager.cpp  plugin_manager.h
src/gui/: CMakeLists.txt  basic_text_entry.h  button.cpp  button.h  common.h  explorer.cpp  gui_string.cpp  menu.cpp  menu.h  scrollbar.h  tab.cpp  text.h
src/gui/src/: .text_entry.cpp.swp  basic_text_entry.cpp  basic_text_entry.h  button.cpp  button.h  common.cpp  common.h  cursor.cpp  cursor.h  entry.cpp  entry.h  explorer.cpp  explorer.h  file_tree.cpp  file_tree.h  gui_string.cpp  gui_string.h  menu.cpp  menu.h  scrollbar.cpp  scrollbar.h  tab.cpp  tab.h  text.cpp  text.h  text_entry.cpp  text_entry.h
src/plugin/: CMakeLists.txt  plugin.h
src/plugin/detail/: lexer.cpp  node.h  parser.cpp  parser.h
src/plugin/src/: plugin.cpp  plugin.h
src/plugin/src/detail/: lexer.cpp  lexer.h  node.h  parser.cpp  parser.h  token.h
